# web

./: .cookiecutter.context.yml  .gitignore  .gitmodules  .publish.sh  .travis.yml  DOCKER_README.md  HISTORY.rst  README.md  docker-all  docker-compose.override.yml  docker-compose.yml  docker-py3o.yml  local.yml  redis.yml  requirements.txt  tasks.py  test.yml
cups-test-server/: README.md
docs/: README.md  deployment.md  docker-dev.md  docker-images.md  docker-test.md  how-to-add-dependency.md  how-to-add-repo.md  how-to-backup-and-restore-volumes.md  how-to-connect-to-docker-psql.md  how-to-integrate-pull-request.md  how-to-pgbadger.md  how-to-set-odoo-configuration-values.md  how-to-test-smtp.md  how-to-use-a-prod-db-in-dev.md  invoke.md  odoo-platform-deployment.md  odoo-test-platform.md  prerequisites.md  pull-requests.md  releases.md  structure.md  upgrade-scripts.md
odoo/: Dockerfile  migration.yml  pending-merges.yaml  requirements.txt  setup.py
setup/_metapackage/: pyproject.toml
tasks/: __init__.py  common.py  deprecate.py  project.py  release.py  requirements.txt  songs.py  submodule.py  translate.py
travis/: git_submodule_update.py  minion-client.py  private_repos  publish.sh
web_charfield_autocomplete/: README.rst  __openerp__.py
web_ckeditor4/: README.rst  __manifest__.py
web_domain_field/: README.rst
web_drop_target/: __manifest__.py
web_environment_ribbon/: README.rst  __manifest__.py
web_ir_actions_act_view_reload/: __manifest__.py
web_no_bubble/: README.rst  __manifest__.py
web_notify/: README.rst  __manifest__.py
(+677 files in other folders)
