[project]
name = "odoo-addons-oca-web"
version = "18.0.20241226.0"
dependencies = [
    "odoo-addon-web_environment_ribbon==18.0.*",
    "odoo-addon-web_no_bubble==18.0.*",
    "odoo-addon-web_notify==18.0.*",
    "odoo-addon-web_pivot_computed_measure==18.0.*",
    "odoo-addon-web_tree_dynamic_colored_field==18.0.*",
    "odoo-addon-web_tree_many2one_clickable==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
